--- a/api/Views/Shared/_LoginPartial.cshtml
+++ b/api/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using WebApplication.Models
+@using RumHam.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
