--- a/api/Views/_ViewImports.cshtml
+++ b/api/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-@using WebApplication
-@using WebApplication.Models
-@using WebApplication.Models.AccountViewModels
-@using WebApplication.Models.ManageViewModels
+@using RumHam
+@using RumHam.Models
+@using RumHam.Models.AccountViewModels
+@using RumHam.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
